--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       </div>
     </main>
   </div>
+   <footer>
+    <p><strong>Copy &copy; 2022 | Md Faizan Ahmad</strong></p>
+  </footer>
   <script src="main.js"></script>
 </body>
 </html>
